# my-web-site

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER-ЗАПУСК.md  Dockerfile  FINAL-SUMMARY.md  I18N-GUIDE.md  QUICKSTART.md  README.md  START-HERE.md  docker-compose.yml  index.html  metadata.json  nginx.conf  package.json  start-dev.ps1  ИНСТРУКЦИЯ-ЗАПУСКА.md  КАК-РЕДАКТИРОВАТЬ-ПРОЕКТЫ.md  ПРОСТОЕ-РАЗВЕРТЫВАНИЕ.md
backend/: .dockerignore  .gitignore  Dockerfile  PRODUCTION-DEPLOY.md  README.md  init-db.ps1  portfolio.db-shm  portfolio.db-wal  pyproject.toml  requirements.txt  run.ps1
backend/.github/workflows/: deploy.yml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  seed_data.py
backend/migrations/: add_i18n_fields.sql
components/: Contact.tsx  Header.tsx  Intro.tsx  Projects.tsx
frontend/: .env  .gitignore  App.tsx  index.html  index.tsx  nginx.conf  package-lock.json  package.json
frontend/api/: client.ts
frontend/components/: Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Intro.tsx  Projects.tsx
frontend/data/: projects.ts
frontend/hooks/: useProjects.ts
frontend/pages/: ProjectPage.tsx
frontend/public/locales/en/: translation.json
frontend/public/locales/ru/: translation.json
frontend/src/: i18n.ts
hooks/: useProject.ts
pages/: Home.tsx  ProjectPage.tsx
